<?xml version="1.0"?>
<package format="2">
  <name>argus_joyop</name>
  <version>0.0.0</version>
  <description>The argus_joyop package</description>
  <author>M. Kaan Tasbas </author>
  <maintainer email="mktasbas@gmail.com">M. Kaan Tasbas</maintainer>
  <license>GPLv3</license>
  <url type="website">https://github.com/eyes-of-argus/argus_joyop</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
